k8s/services/customer-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selmag-customer-app-deployment
  namespace: selmag
  labels:
    app: selmag-customer-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selmag-customer-app
  template:
    metadata:
      labels:
        app: selmag-customer-app
    spec:
      containers:
        - name: selmag-customer-app
          image: host.docker.internal:5000/selmag/customer-app:24.1.1
          ports:
            - containerPort: 8083
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: selmag-customer-app-svc
  namespace: selmag
spec:
  type: ClusterIP
  selector:
    app: selmag-customer-app
  ports:
    - name: http
      port: 8083
      targetPort: 8083
