k8s/services/eureka-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selmag-eureka-server-deployment
  namespace: selmag
  labels:
    app: selmag-eureka-server
spec:
  selector:
    matchLabels:
      app: selmag-eureka-server
  template:
    metadata:
      labels:
        app: selmag-eureka-server
    spec:
      containers:
        - name: selmag-eureka-server
          image: host.docker.internal:5000/selmag/eureka-server:24.1.1
          ports:
            - containerPort: 8761
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8761
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8761
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: selmag-eureka-server-svc
  namespace: selmag
spec:
  type: ClusterIP
  selector:
    app: selmag-eureka-server
  ports:
    - name: http
      port: 8761
      targetPort: 8761
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: selmag-eureka-server-ingress
#  namespace: selmag
#spec:
#  ingressClassName: nginx
#  rules:
#    - host: eureka.selm.ag.192.168.49.2.nip.io
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: selmag-eureka-server-svc
#                port:
#                  name: http
