k8s/services/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selmag-api-gateway-deployment
  namespace: selmag
  labels:
    app: selmag-api-gateway
spec:
  selector:
    matchLabels:
      app: selmag-api-gateway
  template:
    metadata:
      labels:
        app: selmag-api-gateway
    spec:
      containers:
        - name: selmag-api-gateway
          image: host.docker.internal:5000/selmag/api-gateway:24.1.1
          ports:
            - containerPort: 8086
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8086
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8086
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: selmag-api-gateway-svc
  namespace: selmag
spec:
  type: ClusterIP
  selector:
    app: selmag-api-gateway
  ports:
    - name: http
      port: 8086
      targetPort: 8086
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selmag-api-gateway-ingress
  namespace: selmag
spec:
  ingressClassName: nginx
  rules:
    - host: catalogue.api.selm.ag.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: selmag-api-gateway-svc
                port:
                  name: http

    - host: feedback.api.selm.ag.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: selmag-api-gateway-svc
                port:
                  name: http

    - host: manager.selm.ag.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: selmag-api-gateway-svc
                port:
                  name: http

    - host: customer.selm.ag.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: selmag-api-gateway-svc
                port:
                  name: http
