k8s/services/config-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selmag-config-server-deployment
  namespace: selmag
  labels:
    app: selmag-config-server
spec:
  selector:
    matchLabels:
      app: selmag-config-server
  template:
    metadata:
      labels:
        app: selmag-config-server
    spec:
      containers:
        - name: selmag-config-server
          image: host.docker.internal:5000/selmag/config-server:24.1.1
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: selmag-config-server-svc
  namespace: selmag
spec:
  type: NodePort
  ports:
    - port: 8888
      name: http
  selector:
    app: selmag-config-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selmag-config-server-ingress
  namespace: selmag
spec:
  ingressClassName: nginx
  rules:
    - host: config.selm.ag.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: selmag-config-server-svc
                port:
                  name: http
